# joinery

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
docs/: README.md  architecture.md  spec.md
docs/audits/: obra-superpowers-2026-05-18.md
docs/decisions/: 0001-tier-as-risk-profile.md
hooks/: README.md  commit-msg  post-merge  pre-commit  pre-push
scripts/: bump_version.py  check_version_sync.py
skills/: README.md  adr.md  audit.md  debug.md  digest.md  docs-architecture.md  docs-changelog.md  docs-getting-started.md  docs.md  execute-plan.md  explain-back.md  handover.md  mark.md  plan-data.md  plan-decisions.md  plan-flows.md  plan-side-quests.md  plan-system.md  plan.md  pr.md  receiving-review.md  review.md  rule.md  security-review.md  sq.md  swarm.md  tdd.md  using-joinery.md  verify.md  workshop-session-end.md  workshop-session-start.md  writing-skills.md
src/joinery/: README.md  __init__.py  adopt.py  cli.py  config.py  diff.py  doctor.py  git.py  init.py  lang.py  manifest.py  paths.py  preadopt.py  promote.py  roborev.py  rollback.py  session.py  setup.py  templates.py  transactions.py  update.py
templates/: AGENTS.md.template  CLAUDE.md.global  CLAUDE.md.starter  HANDOVER.md.template  README.md  README.md.template  claude-settings.json.template  plan.md.template  session_start_hook.py.template
templates/config/: framework.config.toml.production  framework.config.toml.sketch  framework.config.toml.standard
templates/docs/decisions/: 0001-tier-selection.md.template
templates/gitignore/: .gitignore.polyglot  .gitignore.python  .gitignore.typescript
templates/learning/: comprehension-audits.md.template  side-quests.md.template  skills-log.md.template  weekly-digest.md.template
tests/: README.md  test_adopt.py  test_config.py  test_diff.py  test_doctor_promote.py  test_hooks_pre_push.py  test_init.py  test_lang.py  test_manifest.py  test_preadopt.py  test_roborev.py  test_rollback.py  test_setup.py  test_templates.py  test_transactions.py  test_update.py  test_version_sync.py
