[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joinery-cli"
version = "0.1.0"
description = "A personal coding framework for the AI-agent era."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ryan Beam" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    # Filled in Phase 4 (workshop CLI build).
    # Expected: click for CLI, jinja2 for template rendering.
]

[project.urls]
Homepage = "https://github.com/ryan-beam/joinery"
Documentation = "https://github.com/ryan-beam/joinery/blob/main/docs/spec.md"
Issues = "https://github.com/ryan-beam/joinery/issues"

[project.scripts]
# Forward declaration. The entry point function `joinery.cli:main` does not exist yet.
# It will be implemented in Phase 4 of the build (see plan.md).
workshop = "joinery.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/joinery"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/joinery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
